--- a/acne.html
+++ b/acne.html
@@ -82,16 +82,16 @@
 			<div class="row mt-50">
 				<div class="col-md-9 wow fadeInUp">
 					<p>
-						Se considera que más del 85% de los jóvenes entre los 12 y los 24 años padecen de acné, sin embargo, no es un padecimiento exclusivo de este grupo de edad, ya que también hay mujeres y hombres mayores de 30 años que lo presentan.
+						Se considera que más del 85% de los jóvenes entre los 12 y los 24 años padecen acné, sin embargo, no es un padecimiento exclusivo de este grupo de edad, ya que existen mujeres y hombres mayores de 30 años que lo presentan.
 					</p>
 					<p>
-						Además de las manchas y cicatrices que deja sobre la piel, genera en el paciente depresión y baja autoestima, por lo que es muy importante iniciar su tratamiento lo antes posible.
+						Este padecimiento puede provocar manchas y cicatrices en la piel; sin embargo, llevando a cabo un tratamiento oportuno se disminuyen éstas significativamente.
 					</p>
 					<p>
-						Algunos factores que desencadenan los episodios de acné son los cambios de clima (el calor y la humedad aumentan los brotes), el uso de productos inadecuados para nuestro tipo de piel, los cambios hormonales y el uso de algunos medicamentos, así como la alimentación, entre otros. 
+						Algunos factores que pueden desencadenar los episodios de acné son: cambios de clima (el calor y la humedad aumentan los brotes), el uso de productos inadecuados para nuestro tipo de piel, cambios hormonales, el uso de algunos medicamentos, la alimentación, entre otros. 
 					</p>
 					<p>
-						En nuestra clínica realizamos tratamientos para el acné, así como tratamientos para las secuelas del mismo, mediante tratamiento médico y tecnología láser.
+						En Dermos, clínica dermatológica, contamos con tratamientos médicos y tecnología láser para disminuir el acné y sus secuelas en la piel.
 					</p>
 				</div>
 				<div class="col-md-3 wow fadeInUp" data-wow-delay=".1s">
@@ -159,7 +159,7 @@
 									<em>leer más</em>
 								</div>
 							</div>
-							<p class="text-center">Luz Pulsada Intensa para Manchas y Envejecimiento</p>
+							<p class="text-center">Luz Pulsada para Manchas</p>
 						</a>
 					</div>
 					<!-- end single work -->
@@ -332,7 +332,7 @@
                     <!-- Start Flickr Widget -->
                     <div class="col-md-3 col-xs-12">
                         <div class="footer-widget company-links">
-                            <h4>Clínica Dermos</h4>
+                            <h4>DERMOS<br>Clínica Dermatológica</h4>
 							<ul class="footer-links">
 								<li><a href="index.html">Nosotros</a></li>
 								<li><a href="consulta.html">Tratamientos</a></li>
