--- a/consulta.html
+++ b/consulta.html
@@ -82,7 +82,7 @@
 			<div class="row mt-50">
 				<div class="col-md-9 wow fadeInUp">
 					<p>
-						La piel es el órgano más extenso de nuestro cuerpo, es reflejo de nuestra salud interna y nuestra carta de presentación ante el mundo. Lo más importante para tener excelentes resultados en tu tratamiento es determinar primero qué tipo de piel tienes. Ésta puede ser:
+						La piel es el órgano más extenso de nuestro cuerpo, es reflejo de nuestra salud interna y nuestra carta de presentación ante el mundo. Lo más importante para tener excelentes resultados en tu tratamiento es determinar qué tipo de piel tienes. Ésta puede ser:
 					</p>
 					<ul class="services-list">
 						<li>Sensible o normal</li>
@@ -90,13 +90,13 @@
 						<li>Con tendencia a la pigmentación o a las rojeces</li>
 					</ul>
 					<p>
-						Una vez que determinamos el tipo de piel, buscamos qué es lo que está provocando su alteración. Debemos recordar que existen padecimientos propios de la piel, pero también padecimientos internos que se expresan externamente.
+						Una vez que determinamos el tipo de piel, buscamos qué es lo que está provocando su alteración. Debemos recordar que existen padecimientos propios de la piel, pero también padecimientos internos que se expresan por medio de la piel.
 					</p>
 					<p>
-						Con el diagnóstico establecido, proponemos un tratamiento preciso, adecuado y noble, utilizando los mejores protocolos a nivel internacional y con la tecnología más avanzada.
+						Junto con el diagnóstico establecido, proponemos un tratamiento preciso, adecuado y noble, utilizando los mejores protocolos a nivel internacional y la tecnología más avanzada.
 					</p>
 					<p>
-						Además de los padecimientos de la piel, también somos expertos en tratamientos Dermocosméticos, con lo que mejoramos la apariencia de la piel, su textura y color, mejorando líneas de expresión y cicatrices.
+						Además de ser expertos en padecimientos de la piel, contamos con una amplia experiencia en tratamientos DermoCosméticos, con los cuales, se mejoran la apariencia de la piel, textura, líneas de expresión y cicatrices.
 					</p>
 				</div>
 				<div class="col-md-3 wow fadeInUp" data-wow-delay=".1s">
@@ -164,7 +164,7 @@
 									<em>leer más</em>
 								</div>
 							</div>
-							<p class="text-center">Luz Pulsada Intensa para Manchas y Envejecimiento</p>
+							<p class="text-center">Luz Pulsada para Manchas</p>
 						</a>
 					</div>
 					<!-- end single work -->
@@ -337,7 +337,7 @@
                     <!-- Start Flickr Widget -->
                     <div class="col-md-3 col-xs-12">
                         <div class="footer-widget company-links">
-                            <h4>Clínica Dermos</h4>
+                            <h4>DERMOS<br>Clínica Dermatológica</h4>
 							<ul class="footer-links">
 								<li><a href="index.html#team">Nosotros</a></li>
 								<li><a href="consulta.html">Tratamientos</a></li>
