--- a/dermatologia.html
+++ b/dermatologia.html
@@ -82,7 +82,7 @@
 			<div class="row mt-50">
 				<div class="col-md-9 wow fadeInUp">
 					<p>
-						Consiente tu piel para que luzca visiblemente más joven a través de nuestro experto, quien junto contigo elegirán el tratamiento más adecuado para ti y tú piel.
+						Consiente tu piel para que luzca visiblemente más joven a través del tratamiento, seleccionado por nuestro experto, más adecuado para ti y tu piel.
 					</p>
 				</div>
 				<div class="col-md-3 wow fadeInUp" data-wow-delay=".1s">
@@ -150,7 +150,7 @@
 									<em>leer más</em>
 								</div>
 							</div>
-							<p class="text-center">Luz Pulsada Intensa para Manchas y Envejecimiento</p>
+							<p class="text-center">Luz Pulsada para Manchas</p>
 						</a>
 					</div>
 					<!-- end single work -->
@@ -323,7 +323,7 @@
                     <!-- Start Flickr Widget -->
                     <div class="col-md-3 col-xs-12">
                         <div class="footer-widget company-links">
-                            <h4>Clínica Dermos</h4>
+                            <h4>DERMOS<br>Clínica Dermatológica</h4>
 							<ul class="footer-links">
 								<li><a href="index.html#team">Nosotros</a></li>
 								<li><a href="consulta.html">Tratamientos</a></li>
