--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
 					<div class="section-title-parralax">
 						<div class="process-numbers">01</div>
 						<h2>Nosotros</h2>
-						<p class="module-subtitle">Nuestro objetivo siempre será recuperar y preservar la salud y belleza de tu piel, pelo y uñas con la mejor tecnología y tratamientos de vanguardia científicamente aprobados.
+						<p class="module-subtitle">Nuestro objetivo es recuperar y preservar la salud y belleza de tu piel, pelo y uñas usando la mejor tecnología y tratamientos de vanguardia científicamente aprobados.
 						</p>
 					</div>
 				</div>
@@ -129,11 +129,11 @@
                         <img src="assets/img/team/doctorer.jpg" alt="Doctor Javier Martinez" class="img-responsive showresp" style="display: none;">
                         <div class="team_cover"><div class="team_cover_inner"></div></div>
                         <div class="overlay">
-                            <h6 style="margin-top: -60px;">Cédula Profesional. 5071448</h6>
-                            <h6 style="margin-top: 0px;">Cédula de Especialidad. 09116351</h6>
+                            <h6 style="margin-top: -60px;">Cédula Profesional UdeG. 5071448</h6>
+                            <h6 style="margin-top: 0px;">Cédula de Especialidad U.N.A.M. 09116351</h6>
                             <div class="row">
                             	<div class="col-md-6 col-sm-6 text-left">
-                            		<p class="infodoc">&bull;&nbsp;Especialista en Dermatología egresado del Centro Dermatológico “Dr. Ladislao de la Pascua” avalado por la Universidad Nacional Autónoma de México.<br>&bull;&nbsp;Alta especialidad en Cirugía Dermatológica y Cáncer de piel, certificado por el Consejo Mexicano de Dermatología.</p>
+                            		<p class="infodoc">&bull;&nbsp;Médico Cirujano y Partero.<br>&bull;&nbsp;Especialista en Medicina (Dermatología).<br>&bull;&nbsp;Curso de Posgrado de Alta Especialidad en Medicina Dermato-Oncológica y Cirugía Dermatológica certificado por el Consejo Mexicano de Dermatología.<br>&bull;&nbsp;Especialista en Dermatología egresado del Centro Dermatológico “Dr. Ladislao de la Pascua” avalado por la Universidad Nacional Autónoma de México.<br>
                             	</div>
                             	<div class="col-md-6 col-sm-6 text-left">
                             		<p class="infodoc">&bull;&nbsp;Certificado Consejo Mexicano de Dermatología número 1416, vigente hasta Mayo de 2019.<br>&bull;&nbsp;Estudios de Medicina Interna en el Hospital General Dr. Darío Fernández Fierro - ISSSTE<br>&bull;&nbsp;Médico Cirujano y Partero por la Universidad de Guadalajara.</p>
@@ -147,7 +147,7 @@
             <div class="col-md-8 col-md-offset-2 col-sm-12">
 				<div class="row center mt-50">
 					<div class="section-title-parralax">
-						<p class="module-subtitle">¡Con nosotros encontrarás la confianza y la atención que mereces!</p>
+						<p class="module-subtitle">¡Con nosotros encontrarás la confianza y atención que mereces!</p>
 					</div>
 				</div>
 			</div>
@@ -210,7 +210,7 @@
 										<em>leer más</em>
 									</div>
 								</div>
-								<p class="text-center">Luz Pulsada Intensa para Manchas y Envejecimiento</p>
+								<p class="text-center">Luz Pulsada para Manchas</p>
 							</a>
 						</span>
 					</div>
@@ -393,7 +393,7 @@
 					<div class="section-title-parralax">
 						<div class="process-numbers">03</div>
 						<h2>Conoce nuestras Instalaciones</h2>
-						<p class="module-subtitle">Preocupados por ofrecerte un espacio cómodo, privado y agradable, mantenemos nuestras instalaciones con un estricto control de limpieza y orden, para ofrecerte una experiencia de atención médica segura y confiable.
+						<p class="module-subtitle">Preocupados por ofrecerte un espacio cómodo, privado y agradable, mantenemos nuestras instalaciones con un estricto control de limpieza, para ofrecerte una experiencia de atención médica segura y confiable.
 						</p>
 					</div>
 				</div>
@@ -435,7 +435,7 @@
                             <h4><span>Nos encontramos en:</span></h4>
                             <h3>Dirección</h3>
                                 <p>
-                                    Torre Médica Tepic 113,<br>Consultorio 810<br> Roma Sur, CDMX
+                                    Torre Médica Tepic 113,<br>Consultorio 810<br> Roma Sur, CDMX <br> C.P. 06760
                                 </p>
                         </div>
                     </div>
@@ -448,9 +448,9 @@
                             <h4><span>Escríbenos o Llámanos</span></h4>
                             <h3>Contáctanos</h3>
                             <p>
-                                <abbr title="Email">E:</abbr> <a href="mailto:contacto@dermos.com.mx"> contacto@dermos.com.mx</a>
+                                <abbr title="Email">Email:</abbr> <a href="mailto:contacto@dermos.com.mx"> contacto@dermos.com.mx</a>
                                 <br>
-                                <abbr title="Phone">T:</abbr> (55) 6549-0142 | (55) 7156-5392
+                                <abbr title="Phone">Teléfono:</abbr> (55) 6549-0142 | (55) 7156-5392
                             </p>
                         </div>
                     </div>
@@ -463,8 +463,8 @@
                             <h4><span>Conoce nuestros horarios</span></h4>
                             <h3>Visítanos</h3>
                             <p>
-                                L-S: 9 AM - 2 PM<br>
-                                D: Cerrado
+                                Lunes-Sábado:<br>9 AM - 2 PM<br>
+                                Domingo:<br>Cerrado
                             </p>
                         </div>
                     </div>
@@ -495,7 +495,7 @@
                     <!-- Start Flickr Widget -->
                     <div class="col-md-3 col-xs-12">
                         <div class="footer-widget company-links">
-                            <h4>Clínica Dermos</h4>
+                            <h4>DERMOS<br>Clínica Dermatológica</h4>
 							<ul class="footer-links">
 								<li><a href="index.html#team">Nosotros</a></li>
 								<li><a href="consulta.html">Tratamientos</a></li>
