--- a/pelo.html
+++ b/pelo.html
@@ -81,13 +81,13 @@
 			<div class="row mt-50">
 				<div class="col-md-9 wow fadeInUp">
 					<p>
-						Los padecimientos capilares son un problema frecuente en nuestra consulta. Hay diversos factores para la pérdida de cabello, desde periodos importantes de estrés psicológico, padecimientos crónicos, alteraciones hormonales, deficiencias vitamínicas y de minerales, ciertos medicamentos y el postparto, así como factores hereditarios.
+						Los padecimientos capilares son un problema frecuente en nuestra consulta. Existen diversos factores que favorecen la pérdida de cabello, entre ellos: factores hereditarios, periodos importantes de estrés psicológico, padecimientos crónicos, alteraciones hormonales, deficiencias vitamínicas y de minerales. De igual forma, el consumo de ciertos medicamentos, propician este padecimiento.
 					</p>
 					<p>
-						Aunque es un padecimiento con predominio en los varones, también las mujeres pueden verse afectadas. Con el tratamiento adecuado la gran mayoría de los casos el padecimiento se controla.
+						Aunque la tasa de pérdida capilar es mayor en hombres, las mujeres pueden verse afectadas. Con la ayuda de un tratamiento adecuado, en la mayoría de los casos el padecimiento se controla.
 					</p>
 					<p>
-						¡Atenderte a tiempo con un médico especialista es lo mejor! Determinaremos la causa del problema e iniciaremos un tratamiento seguro y eficaz para que en corto tiempo tengas excelentes resultados. 
+						¡Atenderte a tiempo con un médico especialista es lo mejor! En Dermos Clínica Dermatológica, determinaremos la causa del problema e iniciaremos un tratamiento seguro y eficaz para que en corto tiempo tengas excelentes resultados. 
 					</p>
 					
 				</div>
@@ -156,7 +156,7 @@
 									<em>leer más</em>
 								</div>
 							</div>
-							<p class="text-center">Luz Pulsada Intensa para Manchas y Envejecimiento</p>
+							<p class="text-center">Luz Pulsada para Manchas</p>
 						</a>
 					</div>
 					<!-- end single work -->
@@ -329,7 +329,7 @@
                     <!-- Start Flickr Widget -->
                     <div class="col-md-3 col-xs-12">
                         <div class="footer-widget company-links">
-                            <h4>Clínica Dermos</h4>
+                            <h4>DERMOS<br>Clínica Dermatológica</h4>
 							<ul class="footer-links">
 								<li><a href="index.html#team">Nosotros</a></li>
 								<li><a href="consulta.html">Tratamientos</a></li>
