--- a/unias.html
+++ b/unias.html
@@ -74,7 +74,7 @@
 			<div class="col-md-8 col-md-offset-2 col-sm-12">
 				<div class="section-title">
 					<h2>PADECIMIENTOS EN UÑAS</h2>
-					<p class="module-subtitle mt-50">Los Dermatólogos somos los médicos especializados<BR>en la atención de las alteraciones de las uñas</p>
+					<p class="module-subtitle mt-50">Además de ser expertos en alteraciones de la piel, los dermatólogos somos los indicados para evaluar el estado de salud de tus uñas</p>
 				</div>
 			</div>
 			</div>
@@ -82,7 +82,7 @@
 			<div class="row mt-50">
 				<div class="col-md-9 wow fadeInUp">
 					<p>
-						Existen diversos padecimientos que aquejan a las uñas, tanto de manos como de pies, que requieren tratamientos médicos. No todas las alteraciones de color, grosor o forma de las uñas son causadas por infecciones por hongos, así que siempre que exista algún problema con ellas es muy importante acudir a valoración con tu dermatólogo. 
+						No todas las alteraciones de color, grosor o forma de las uñas son causadas por infecciones de hongos, existen diversos padecimientos que requieren tratamientos médicos; por lo que, siempre que exista algún cambio significativo en tus uñas, acude a nuestro especialista para que te evalúe.
 					</p>
 				</div>
 				<div class="col-md-3 wow fadeInUp" data-wow-delay=".1s">
@@ -150,7 +150,7 @@
 									<em>leer más</em>
 								</div>
 							</div>
-							<p class="text-center">Luz Pulsada Intensa para Manchas y Envejecimiento</p>
+							<p class="text-center">Luz Pulsada para Manchas</p>
 						</a>
 					</div>
 					<!-- end single work -->
@@ -323,7 +323,7 @@
                     <!-- Start Flickr Widget -->
                     <div class="col-md-3 col-xs-12">
                         <div class="footer-widget company-links">
-                            <h4>Clínica Dermos</h4>
+                            <h4>DERMOS<br>Clínica Dermatológica</h4>
 							<ul class="footer-links">
 								<li><a href="index.html#team">Nosotros</a></li>
 								<li><a href="consulta.html">Tratamientos</a></li>
