--- a/cancer.html
+++ b/cancer.html
@@ -73,7 +73,7 @@
 			<div class="row center">
 			<div class="col-md-8 col-md-offset-2 col-sm-12">
 				<div class="section-title">
-					<h2>TRATAMIENTO DEL CÁNCER DE PIEL</h2>
+					<h2>CÁNCER DE PIEL</h2>
 					<p class="module-subtitle mt-50">Cáncer de Piel, un padecimiento frecuente.</p>
 				</div>
 			</div>
@@ -82,20 +82,19 @@
 			<div class="row mt-50">
 				<div class="col-md-9 wow fadeInUp">
 					<p>
-						De acuerdo a la <a href="https://www.cancer.org/es/cancer/cancer-de-piel-tipo-melanoma/deteccion-diagnostico-clasificacion-por-etapas/tasas-de-supervivencia-para-el-cancer-de-piel-de-tipo-melanoma-por-etapas.html" style="color: #9d84bd" title="Tasa de Supervivencia Para el Cáncer de Piel" target="_blank">Sociedad Americana Contra el Cáncer</a>, hay un 95% de supervivencia al Cáncer de Piel, siendo también el tipo de cáncer más frecuente entre los tipos de Cáncer.
+						De acuerdo a la <a href="https://www.cancer.org/es/cancer/cancer-de-piel-tipo-melanoma/deteccion-diagnostico-clasificacion-por-etapas/tasas-de-supervivencia-para-el-cancer-de-piel-de-tipo-melanoma-por-etapas.html" style="color: #9d84bd" title="Tasa de Supervivencia Para el Cáncer de Piel" target="_blank">Sociedad Americana Contra el Cáncer</a>, el cáncer de piel se encuentra dentro de las enfermedades oncológicas con mayor frecuencia; sin embargo, al tener un tratamiento oportuno, el porcentaje de supervivencia al mismo llega a ser llega a ser hasta del 95%.
 					</p>
 					<p>
-						Las causas más comunes son:
+						Dentro de las causas más comunes, podemos encontrar:
 					</p>
 					<ul>
-						<li>&bull;&nbsp;La <b style="font-weight: bold !important;">exposición excesiva a la radiación ultravioleta (UV)</b>, cuya principal fuente es la luz solar. El grado de exposición a esta radiación depende de la intensidad de la luz, del tiempo de exposición y de si la piel ha estado protegida. Las personas que viven en áreas donde están expuestas todo el año a una luz solar intensa, tienen un mayor riesgo de desarrollar este tipo de cáncer. Además, estar largo tiempo a la intemperie por motivos de trabajo u ocio sin protegerse con ropas adecuadas y protección solar incrementa la posibilidad de desarrollarlo.</li>
-						<li>&bull;&nbsp;Las <b style="font-weight: bold !important;">lámparas y cabinas bronceadoras</b> son otra fuente de radiación ultravioleta que pueden aumentar el riesgo de desarrollar un cáncer de la piel no melanoma.</li>
-						<li>&bull;&nbsp;La <b style="font-weight: bold !important;">exposición a ciertos productos químicos</b>, como la producida por la radioterapia.</li>
-						<li>&bull;&nbsp;La <b style="font-weight: bold !important;">exposición a la radiación</b> como el arsénico, la brea industrial, la hulla, la parafina y ciertos tipos de aceites.</li>
-						<li>&bull;&nbsp;Las <b style="font-weight: bold !important;">lesiones o inflamaciones graves o prolongadas de la piel</b>, como pueden ser las quemaduras graves, la piel que recubre el área donde se produjo una infección ósea grave y la piel dañada por ciertos padecimientos inflamatorios.</li>
+						<li>&bull;&nbsp;La <b style="font-weight: bold !important;">exposición excesiva a la radiación ultravioleta (UV)</b>, cuya principal fuente es la luz solar. El grado de exposición a esta radiación depende de la intensidad de la luz, tiempo de exposición y protección de la piel. Las personas con mayor grado de exposición, tienden a desarrollar este tipo de cáncer. Además, estar largo tiempo a la intemperie por motivos de trabajo u ocio sin protegerse con ropas adecuadas y protección solar incrementa la posibilidad de desarrollarlo.</li>
+						<li>&bull;&nbsp;Las <b style="font-weight: bold !important;">lámparas y cabinas bronceadoras</b> son otra fuente de radiación ultravioleta, las cuales pueden aumentar el riesgo de desarrollar un cáncer de la piel no melanoma.</li>
+						<li>&bull;&nbsp;La <b style="font-weight: bold !important;">exposición frecuente a ciertos productos químicos</b> como el arsénico, la brea industrial, la hulla, la parafina y ciertos tipos de aceites.</li>
+						<li>&bull;&nbsp;Las <b style="font-weight: bold !important;">lesiones o inflamaciones graves o prolongadas de la piel</b>.</li>
 					</ul>
 					<p>
-						Si tienes una herida que no cura o un lunar que ha crecido, cambiado de color o sangrado, no dudes en acudir para que te valore un Dermatooncólogo certificado. El cáncer de piel es curable cuando es detectado y tratado a tiempo. 
+						Si tienes una herida que no sana o un lunar que ha crecido, cambiado de color o sangrado, no dudes en acudir a Dermos Clínica Dermatológica para que seas valorado por Oncodermatólogo certificado. Recuerda: El cáncer de piel es curable cuando es detectado y tratado a tiempo. 
 					</p>
 				</div>
 				<div class="col-md-3 wow fadeInUp" data-wow-delay=".1s">
@@ -163,7 +162,7 @@
 									<em>leer más</em>
 								</div>
 							</div>
-							<p class="text-center">Luz Pulsada Intensa para Manchas y Envejecimiento</p>
+							<p class="text-center">Luz Pulsada para Manchas</p>
 						</a>
 					</div>
 					<!-- end single work -->
@@ -336,7 +335,7 @@
                     <!-- Start Flickr Widget -->
                     <div class="col-md-3 col-xs-12">
                         <div class="footer-widget company-links">
-                            <h4>Clínica Dermos</h4>
+                            <h4>DERMOS<br>Clínica Dermatológica</h4>
 							<ul class="footer-links">
 								<li><a href="index.html#team">Nosotros</a></li>
 								<li><a href="consulta.html">Tratamientos</a></li>
