--- a/depilacion.html
+++ b/depilacion.html
@@ -81,7 +81,7 @@
 			<div class="row mt-50">
 				<div class="col-md-9 wow fadeInUp">
 					<p>
-						Contamos con luz pulsada intensa, que nos ayuda a depilar las zonas del cuerpo de tu preferencia y eliminar esos vellos que nunca debieron salir ahí.
+						Contamos con luz pulsada intensa, que nos ayuda a depilar las zonas del cuerpo de tu preferencia, eliminando esos vellos no deseados.
 					</p>
 				</div>
 				<div class="col-md-3 wow fadeInUp" data-wow-delay=".1s">
@@ -149,7 +149,7 @@
 									<em>leer más</em>
 								</div>
 							</div>
-							<p class="text-center">Luz Pulsada Intensa para Manchas y Envejecimiento</p>
+							<p class="text-center">Luz Pulsada para Manchas</p>
 						</a>
 					</div>
 					<!-- end single work -->
@@ -322,7 +322,7 @@
                     <!-- Start Flickr Widget -->
                     <div class="col-md-3 col-xs-12">
                         <div class="footer-widget company-links">
-                            <h4>Clínica Dermos</h4>
+                            <h4>DERMOS<br>Clínica Dermatológica</h4>
 							<ul class="footer-links">
 								<li><a href="index.html#team">Nosotros</a></li>
 								<li><a href="consulta.html">Tratamientos</a></li>
