--- a/envejecimiento.html
+++ b/envejecimiento.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-	<title>Luz Pulsada Intensa | Dermos</title>
+	<title>Luz Pulsada | Dermos</title>
 	<!-- META TAGS -->
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
@@ -73,7 +73,7 @@
 			<div class="row center">
 			<div class="col-md-8 col-md-offset-2 col-sm-12">
 				<div class="section-title">
-					<h2>LUZ PULSADA INTENSA PARA MANCHAS Y ENVEJECIMIENTO</h2>
+					<h2>LUZ PULSADA PARA MANCHAS</h2>
 				</div>
 			</div>
 			</div>
@@ -81,13 +81,13 @@
 			<div class="row mt-50">
 				<div class="col-md-9 wow fadeInUp">
 					<p>
-						Las manchas en rostro son un problema frecuente en nuestra población. Afecta sobre todo a mujeres, pero 1 de cada 10 pacientes con manchas es hombre.  Están directamente relacionadas con la exposición solar, así como a la exposición a luz generada por computadora, lámparas blancas, etc. En el caso de las mujeres, los cambios hormonales, el embarazo y la utilización de anticonceptivos pueden propiciar su aparición.
+						Las manchas en rostro son un problema frecuente dentro de la población mexicana. Afecta sobre todo a mujeres, pero 1 de cada 10 pacientes con manchas es hombre.  Estas están directamente relacionadas a la exposición solar, así como a la luz generada por computadoras, lámparas blancas, etc. En el caso de las mujeres, los cambios hormonales, el embarazo y la utilización de anticonceptivos pueden propiciar su aparición.
 					</p>
 					<p>
-						Durante el tratamiento de Luz Pulsada, se aplican de forma segura y suave, destellos concentrados de luz que tratan las manchas por el sol, edad, la piel laxa y arrugas, lo que propiciar la producción de colágeno y promueve la reestructuración de la piel.
+						Durante el tratamiento de Luz Pulsada, se aplican de forma segura y suave, destellos concentrados de luz propician la producción de colágeno, promoviendo la reestructuración de la piel.
 					</p>
 					<p>
-						Este tratamiento está indicado para el tratamiento de:
+						Este tratamiento se encuentra recomendado para:
 					</p>
 					<ul class="services-list">
 						<li>Acné</li>
@@ -96,7 +96,7 @@
 						<li>Irregularidades de pigmentación</li>
 					</ul>
 					<p>
-						El tratamiento de Luz Pulsada está diseñado para ofrecerle su mejor cara y revelar una piel suave y saludable. Es muy importante iniciar tu tratamiento lo antes posible, ya que de esto depende el éxito del mismo.
+						El tratamiento con Luz Pulsada está diseñado para ofrecer una mejor apariencia de la piel y mayor suavidad de la misma. Una vez realizada la valoración dérmica, es importante iniciar tu tratamiento lo antes posible, ya que de esto depende el éxito del mismo.
 					</p>
 				</div>
 				<div class="col-md-3 wow fadeInUp" data-wow-delay=".1s">
@@ -164,7 +164,7 @@
 									<em>leer más</em>
 								</div>
 							</div>
-							<p class="text-center">Luz Pulsada Intensa para Manchas y Envejecimiento</p>
+							<p class="text-center">Luz Pulsada para Manchas</p>
 						</a>
 					</div>
 					<!-- end single work -->
@@ -337,7 +337,7 @@
                     <!-- Start Flickr Widget -->
                     <div class="col-md-3 col-xs-12">
                         <div class="footer-widget company-links">
-                            <h4>Clínica Dermos</h4>
+                            <h4>DERMOS<br>Clínica Dermatológica</h4>
 							<ul class="footer-links">
 								<li><a href="index.html#team">Nosotros</a></li>
 								<li><a href="consulta.html">Tratamientos</a></li>
