--- a/microdermoabrasion.html
+++ b/microdermoabrasion.html
@@ -81,15 +81,15 @@
 			<div class="row mt-50">
 				<div class="col-md-9 wow fadeInUp">
 					<p>
-						Estos procedimientos permiten renovar las diferentes capas de la piel por medio de una turbina de agua, un succionado o una punta diamante. Se realiza una limpieza profunda que eliminará las células muertas e impurezas que se pueden encontrar en la piel de tu rostro. Después de ser valorado por nuestro Dermatólogo, se determina cuál es el más adecuado en tu caso y los cuidados que deberás tener.
+						Estos procedimientos permiten renovar las diferentes capas de la piel a través del uso de una turbina de agua, un succionado o una punta diamante. Se realiza una limpieza profunda que eliminará las células muertas e impurezas que pueden encontrarse en la piel de tu rostro. Al ser valorado por nuestro Dermatólogo, eeste determinará, en caso de ser necesario, la técnica más adecuada para tu caso , así como los cuidados que deberás tener a fin de obtener mejores resultados.
 					</p>
 					<p>
-						Indicaciones:
+						Este tratamiento se recomienda para:
 					</p>
 					<ul class="services-list">
 						<li>Problemas de pigmentación</li>
-						<li>Cicatrices y manchas por acné</li>
-						<li>Envejecimiento prematuro</li>
+						<li>Cicatrices y manchas causadas por acné</li>
+						<li>Mejorar visiblemente los signos causados por la edad</li>
 						<li>Cicatrices Quirúrgicas</li>
 						<li>Estrías</li>
 						<li>Irregularidades en textura (poros abiertos, puntos negros, etc.)</li>
@@ -160,7 +160,7 @@
 									<em>leer más</em>
 								</div>
 							</div>
-							<p class="text-center">Luz Pulsada Intensa para Manchas y Envejecimiento</p>
+							<p class="text-center">Luz Pulsada para Manchas</p>
 						</a>
 					</div>
 					<!-- end single work -->
@@ -335,7 +335,7 @@
                     <!-- Start Flickr Widget -->
                     <div class="col-md-3 col-xs-12">
                         <div class="footer-widget company-links">
-                            <h4>Clínica Dermos</h4>
+                            <h4>DERMOS<br>Clínica Dermatológica</h4>
 							<ul class="footer-links">
 								<li><a href="index.html#team">Nosotros</a></li>
 								<li><a href="consulta.html">Tratamientos</a></li>
