--- a/radiofrecuencia.html
+++ b/radiofrecuencia.html
@@ -81,10 +81,10 @@
 			<div class="row mt-50">
 				<div class="col-md-9 wow fadeInUp">
 					<p>
-						Es un procedimiento no invasivo que permite mejorar la firmeza mediante ondas electromagnéticas que generan calor en las capas superficiales y profundas de la piel, lo que se traduce en estimulación de la producción de colágeno, drenaje linfático, mejoría de la circulación e hidratación. 
+						Procedimiento no invasivo que mejora la firmeza de la piel mediante el uso de ondas electromagnéticas que estimulan la producción de colágeno, el drenaje linfático, la circulación y la hidratación. 
 					</p>
 					<p>
-						Se puede realizar para:
+						Se recomienda su uso para:
 					</p>
 					<ul class="services-list">
 						<li>Lifting Facial</li>
@@ -93,7 +93,7 @@
 						<li>Tratamiento de Celulitis</li>
 					</ul>
 					<p>
-						Recuerda que siempre es importante ser valorado por el Dermatólogo antes de realizar cualquier procedimiento. 
+						Recuerda que siempre es importante ser valorado por un Dermatólogo antes de realizarte cualquier procedimiento dermatológico o cosmético. 
 					</p>
 				</div>
 				<div class="col-md-3 wow fadeInUp" data-wow-delay=".1s">
@@ -161,7 +161,7 @@
 									<em>leer más</em>
 								</div>
 							</div>
-							<p class="text-center">Luz Pulsada Intensa para Manchas y Envejecimiento</p>
+							<p class="text-center">Luz Pulsada para Manchas</p>
 						</a>
 					</div>
 					<!-- end single work -->
@@ -334,7 +334,7 @@
                     <!-- Start Flickr Widget -->
                     <div class="col-md-3 col-xs-12">
                         <div class="footer-widget company-links">
-                            <h4>Clínica Dermos</h4>
+                            <h4>DERMOS<br>Clínica Dermatológica</h4>
 							<ul class="footer-links">
 								<li><a href="index.html#team">Nosotros</a></li>
 								<li><a href="consulta.html">Tratamientos</a></li>
