--- a/cancer.html
+++ b/cancer.html
@@ -88,7 +88,7 @@
 						Dentro de las causas más comunes, podemos encontrar:
 					</p>
 					<ul>
-						<li>&bull;&nbsp;La <b style="font-weight: bold !important;">exposición excesiva a la radiación ultravioleta (UV)</b>, cuya principal fuente es la luz solar. El grado de exposición a esta radiación depende de la intensidad de la luz, tiempo de exposición y protección de la piel. Las personas con mayor grado de exposición, tienden a desarrollar este tipo de cáncer. Además, estar largo tiempo a la intemperie por motivos de trabajo u ocio sin protegerse con ropas adecuadas y protección solar incrementa la posibilidad de desarrollarlo.</li>
+						<li>&bull;&nbsp;La <b style="font-weight: bold !important;">exposición excesiva a la radiación ultravioleta (UV)</b>, cuya principal fuente es la luz solar. El grado de exposición a esta radiación depende de la intensidad de la luz, tiempo de exposición y protección de la piel. Las personas con mayor grado de exposición, tienden a desarrollar este tipo de cáncer.</li>
 						<li>&bull;&nbsp;Las <b style="font-weight: bold !important;">lámparas y cabinas bronceadoras</b> son otra fuente de radiación ultravioleta, las cuales pueden aumentar el riesgo de desarrollar un cáncer de la piel no melanoma.</li>
 						<li>&bull;&nbsp;La <b style="font-weight: bold !important;">exposición frecuente a ciertos productos químicos</b> como el arsénico, la brea industrial, la hulla, la parafina y ciertos tipos de aceites.</li>
 						<li>&bull;&nbsp;Las <b style="font-weight: bold !important;">lesiones o inflamaciones graves o prolongadas de la piel</b>.</li>
@@ -218,7 +218,7 @@
 									<em>leer más</em>
 								</div>
 							</div>
-							<p class="text-center">Tratamiento del Cáncer de Piel</p>
+							<p class="text-center">Cáncer de Piel</p>
 						</a>
 					</div>
 					<!-- end single work -->
