--- a/consulta.html
+++ b/consulta.html
@@ -220,7 +220,7 @@
 									<em>leer más</em>
 								</div>
 							</div>
-							<p class="text-center">Tratamiento del Cáncer de Piel</p>
+							<p class="text-center">Cáncer de Piel</p>
 						</a>
 					</div>
 					<!-- end single work -->
