--- a/dermoabrasion.html
+++ b/dermoabrasion.html
@@ -81,15 +81,15 @@
 			<div class="row mt-50">
 				<div class="col-md-9 wow fadeInUp">
 					<p>
-						Estos procedimientos permiten renovar las diferentes capas de la piel por medio de una turbina de agua, un succionado o una punta diamante. Se realiza una limpieza profunda que eliminará las células muertas e impurezas que se pueden encontrar en la piel de tu rostro. Después de ser valorado por nuestro Dermatólogo, se determina cuál es el más adecuado en tu caso y los cuidados que deberás tener.
+						Estos procedimientos permiten renovar las diferentes capas de la piel a través del uso de una turbina de agua, un succionado o una punta diamante. Se realiza una limpieza profunda que eliminará las células muertas e impurezas que pueden encontrarse en la piel de tu rostro. Al ser valorado por nuestro Dermatólogo, eeste determinará, en caso de ser necesario, la técnica más adecuada para tu caso, así como los cuidados que deberás tener a fin de obtener mejores resultados.
 					</p>
 					<p>
-						Indicaciones:
+						Este tratamiento se recomienda para:
 					</p>
 					<ul class="services-list">
 						<li>Problemas de pigmentación</li>
 						<li>Cicatrices y manchas por acné</li>
-						<li>Envejecimiento prematuro</li>
+						<li>Mejorar visiblemente los signos causados por la edad</li>
 						<li>Cicatrices Quirúrgicas</li>
 						<li>Estrías</li>
 						<li>Irregularidades en textura (poros abiertos, puntos negros, etc.)</li>
