--- a/index.html
+++ b/index.html
@@ -274,7 +274,7 @@
 										<em>leer más</em>
 									</div>
 								</div>
-								<p class="text-center">Tratamiento del Cáncer de Piel</p>
+								<p class="text-center">Cáncer de Piel</p>
 							</a>
 						</span>
 					</div>
@@ -463,7 +463,7 @@
                             <h4><span>Conoce nuestros horarios</span></h4>
                             <h3>Visítanos</h3>
                             <p>
-                                Lunes-Sábado:<br>9 AM - 2 PM<br>
+                                Lunes-Sábado:<br>9 AM - 8 PM<br>
                                 Domingo:<br>Cerrado
                             </p>
                         </div>
