--- a/lunares.html
+++ b/lunares.html
@@ -205,7 +205,7 @@
 									<em>leer más</em>
 								</div>
 							</div>
-							<p class="text-center">Tratamiento del Cáncer de Piel</p>
+							<p class="text-center">Cáncer de Piel</p>
 						</a>
 					</div>
 					<!-- end single work -->
